--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
             <!-- about section -->
             <div class="about-container">
                 <h3 class="section-title">About Me</h3>
-                <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy
+                    developing simple, clean and slick
                     websites that provide real value to the end user. Thousands of clients have procured exceptional
                     resulfs while working with me. Delivering work within time and budget which meets clients
                     requirements in our mata.
                 </p>
 
-                <div class="info-container">
+                <div class="about-info-container">
                     <div class="info">
                         <h4 class="info-title">Name:</h4>
                         <p class="info-description">
@@ -75,6 +76,112 @@
 
             </div>
 
+        </section>
+
+
+        <section>
+            <!-- what i do section -->
+            <h2 class="section-title">What I do</h2>
+
+            <p class="i-do-description">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.
+            </p>
+
+            <div class="language-container">
+
+                <div>
+                    <img src="./images/icons/js.png" alt="Javascript icon">
+                    <h3 class="language-title">Vanilla JavaScript</h3>
+                    <p class="language-description">List skill/technologies here. You can change the icon above to any
+                        of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div>
+                    <img src="./images/icons/react.png" alt="React icon">
+                    <h3 class="language-title">React</h3>
+                    <p class="language-description">List skill/technologies here. You can change the icon above to any
+                        of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div>
+                    <img src="./images/icons/nodejs.png" alt="Node js icon">
+                    <h3 class="language-title">Node.js</h3>
+                    <p class="language-description">List skill/technologies here. You can change the icon above to any
+                        of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div>
+                    <img src="./images/icons/mongo.png" alt="MongoDB icon">
+                    <h3 class="language-title">MongoDB</h3>
+                    <p class="language-description">List skill/technologies here. You can change the icon above to any
+                        of the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <!-- resume section -->
+
+            <h2 class="section-title">A summary of My Resume</h2>
+            <div class="resume-container">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div>
+                        <h3 class="resume-info-title">Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p class="education-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3 class="resume-info-title">Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p class="education-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3 class="resume-info-title">Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p class="education-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div>
+                        <h3 class="resume-info-title">Sr. Font End Developer</h3>
+                        <h4>Apple Inc / 2020 - Current</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3 class="resume-info-title">Jr. Font End Developer</h3>
+                        <h4>Dribbble Inc / 2018 - 2022</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3 class="resume-info-title">HTML Developer</h3>
+                        <h4>Adobe Inc / 2017 - 2018</h4>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-resume"><button class="btn-primary">Download CV</button></div>
+            
         </section>
 
 
