--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
 
+        <link rel="shortcut icon" href="./images/coding.png" type="image/x-icon">
+
     <link rel="stylesheet" href="./styles/portfolio.css">
 </head>
 
@@ -183,9 +185,7 @@
             <div class="btn-resume"><button class="btn-primary">Download CV</button></div>
             
         </section>
-
-
-
+        
     </main>
 
     <footer>
