--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
 
-        <link rel="shortcut icon" href="./images/coding.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/coding.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./styles/portfolio.css">
 </head>
@@ -183,12 +183,36 @@
                 </div>
             </div>
             <div class="btn-resume"><button class="btn-primary">Download CV</button></div>
-            
+
         </section>
-        
+
     </main>
 
     <footer>
+        <section class="footer-section">
+            <div class="footer-column">
+                <h2 class="footer-title">Lets Connect</h2>
+                <p class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div>
+                    <img src="./images/icons/facebook.png" alt="facebook icon">
+                    <img src="./images/icons/twitter.png" alt="twitter icon">
+                    <img src="./images/icons/insta.png" alt="instagram icon">
+                </div>
+
+            </div>
+            <div class="footer-column">
+                <h2 class="footer-title">Let’s Message me</h2>
+
+                <form class="contact" action="">
+                    <input type="text" name="" id="" placeholder="Your name">
+                    <input type="email" name="" id="" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <button class="btn-primary">Submit</button>
+                </form>
+
+            </div>
+
+        </section>
 
     </footer>
 
