--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="footer-column">
                 <h2 class="footer-title">Lets Connect</h2>
                 <p class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                <div>
+                <div class="icon-container">
                     <img src="./images/icons/facebook.png" alt="facebook icon">
                     <img src="./images/icons/twitter.png" alt="twitter icon">
                     <img src="./images/icons/insta.png" alt="instagram icon">
